[project]
name = "sqe-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Talha Iftikhar", email = "talhaiftikhar13209@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.95.0",
    "crewai-tools>=0.33.0",
    "litellm>=1.65.0",
    "markdown>=3.7",
    "streamlit>=1.44.0",
]

[project.scripts]
sqe-prototype = "sqe_prototype:main"
test = "sqe_prototype.test_chatbot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
